# Car-racing-game

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  build.sh  c++  https:::soundimage.org.txt  sfml-app  soundimage.org.txt
.circleci/: config.yml
docs/html/: _asset_manager_8hpp_source.html  _bot_8hpp_source.html  _bullet_8hpp_source.html  _busted_state_8hpp_source.html  _camera_8hpp_source.html  _car_8hpp_source.html  _client_8hpp.html  _client_8hpp_source.html  _client_room_8hpp.html  _client_room_8hpp_source.html  _client_state_8hpp.html  _client_state_8hpp_source.html  _collision_8hpp_source.html  _d_e_f_i_n_i_t_i_o_n_s_8hpp_source.html  _game_8cpp.html  _game_8hpp_source.html  _game_map_8hpp_source.html  _game_over_state_8hpp_source.html  _game_simulator_8cpp.html  _game_simulator_8hpp.html  _game_simulator_8hpp_source.html  _game_state_8hpp_source.html  _input_manager_8hpp_source.html  _line_8hpp_source.html  _main_menu_state_8cpp.html  _main_menu_state_8hpp_source.html  _network_manager_8hpp_source.html  _object_pool_8hpp.html  _object_pool_8hpp_source.html  _pause_state_8hpp_source.html  _percentage_bar_8hpp_source.html  _player_car_8cpp.html  _player_car_8hpp_source.html  _server_8hpp.html  _server_8hpp_source.html  _server_room_8hpp.html  _server_room_8hpp_source.html  _server_state_8hpp.html  _server_state_8hpp_source.html  _splash_state_8hpp_source.html  (+93 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  related_0.js  (+1 more)
docs/latex/: _client_8hpp.tex  _client_room_8hpp.tex  _client_state_8hpp.tex  _game_8cpp.tex  _game_simulator_8cpp.tex  _game_simulator_8hpp.tex  _main_menu_state_8cpp.tex  _object_pool_8hpp.tex  _player_car_8cpp.tex  _server_8hpp.tex  _server_room_8hpp.tex  _server_state_8hpp.tex  annotated.tex  classcp_1_1_asset_manager.tex  classcp_1_1_bot.eps  classcp_1_1_bot.tex  classcp_1_1_bullet.eps  classcp_1_1_bullet.tex  classcp_1_1_busted_state.eps  classcp_1_1_busted_state.tex  classcp_1_1_camera.tex  classcp_1_1_car.eps  classcp_1_1_car.tex  classcp_1_1_client.tex  classcp_1_1_client_room.eps  classcp_1_1_client_room.tex  classcp_1_1_client_state.eps  classcp_1_1_client_state.tex  classcp_1_1_collision.tex  classcp_1_1_game.tex  classcp_1_1_game_map.tex  classcp_1_1_game_over_state.eps  classcp_1_1_game_over_state.tex  classcp_1_1_game_simulation_log.tex  classcp_1_1_game_simulator.tex  classcp_1_1_game_simulator_snap.tex  classcp_1_1_game_state.eps  classcp_1_1_game_state.tex  classcp_1_1_input_manager.tex  classcp_1_1_line.tex  (+41 more)
env/: .all.mk  linux.all.mk  linux.debug.mk  linux.release.mk  osx.all.mk  osx.debug.mk  osx.release.mk  rpi.release.mk  windows.all.mk  windows.debug.mk  windows.release.mk
env/osx/: Info.plist.json
include/: AssetManager.hpp  Bot.hpp  Bullet.hpp  BustedState.hpp  Camera.hpp  Car.hpp  Cars.hpp  Client.hpp  ClientPlayer.hpp  ClientState.hpp  Collision.hpp  DEFINITIONS.hpp  Game.hpp  GameMap.hpp  GameOverState.hpp  GameSimulator.hpp  GameState.hpp  InputManager.hpp  Line.hpp  MainMenuState.hpp  NetworkManager.hpp  ObjectPool.hpp  PauseState.hpp  PercentageBar.hpp  Pipe.hpp  PlayerCar.hpp  Server.hpp  ServerRoom.hpp  ServerState.hpp  SplashState.hpp  State.hpp  StateMachine.hpp
include/Network/: Client.hpp  ClientRoom.hpp  Server.hpp  ServerRoom.hpp
include/Objects/: Bot.hpp  Bullet.hpp  Car.hpp  GameMap.hpp  Line.hpp  PlayerCar.hpp
include/Physics/: Collision.hpp
include/States/: BustedState.hpp  ClientState.hpp  GameOverState.hpp  GameSimulator.hpp  GameState.hpp  MainMenuState.hpp  PauseState.hpp  ServerState.hpp
libs/: AssetManager.cpp  Bot.cpp  Bullet.cpp  BustedState.cpp  CMakeLists.txt  Car.cpp  Cars.cpp  Client.cpp  ClientState.cpp  Game.cpp  GameMap.cpp  GameOverState.cpp  GameSimulator.cpp  GameState.cpp  InputManager.cpp  MainMenuState.cpp  NetworkManager.cpp  PauseState.cpp  PlayerCar.cpp  Server.cpp  ServerState.cpp  SplashState.cpp  StateMachine.cpp
res/: punk kid font license.txt
res/chequered-ink_vermin-vibes-v/: FSLA_NonCommercial_License.html  Get Commercial License.url
res/sf-atarian-system/Atarian/: Readme.txt
src/: Main.cpp  PCH.hpp  sfml-app
